[project]
name = "ai-webscrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tinydb>=4.8.2",
]
